fixed depracations